2005-05-15  Derek Price  <derek@ximbiot.com>

	* glob.m4 (gl_GLOB): Don't call gl_PREREQ_GLOB.
	(gl_PREREQ_GLOB): Replace search for lots of headers by requiring
	AC_HEADER_DIRENT.  dirent64 is a type, not a function.

2005-05-12  Derek Price  <derek@ximbiot.com>

	* d-type.m4: New file from GNULIB.
	* glob.m4 (gl_GLOB): Remove indirection.  Check gnu-versions.h instead
	of looking for glob_pattern_p().  Use new d-type macro.
	(gl_PREREQ_GLOB): Reformat to remove blanks line in the generated
	configure script.

2005-05-11  Derek Price  <derek@ximbiot.com>

	* glob.m4: New file.
	* strdup.m4: New file from GNULIB.

2005-05-10  Derek Price  <derek@ximbiot.com>

	* getopt.m4, stat-macros.m4: Update from GNULIB.

2005-05-06  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update from GNULIB.  Closes cvshome.org issue #248.

2005-05-03  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* clock_time.m4, gnulib.m4, lstat.m4, mkstemp.m4, nanosleep.m4,
	stat-macros.m4: Updated.
	* unistd-safer.m4: New file.

2005-05-01  Mark D. Baushke  <mdb@cvshome.org>

	* mmap-anon.m4: Update from GNULIB.

2005-04-25  Derek Price  <derek@ximbiot.com>

	* getpass.m4, gettext.m4: Update from GNULIB.

2005-03-29  Mark D. Baushke  <mdb@cvshome.org>

	* getcwd-path-max.m4: Update from GNULIB.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* chdir-long.m4, closeout.m4, dirname.m4, exitfail.m4,
	fpending.m4, getcwd.m4, getdate.m4, getline.m4, getpagesize.m4,
	getpass.m4, gettext.m4, gnulib.m4, lib-link.m4, md5.m4,
	memrchr.m4, nanosleep.m4, nls.m4, pathmax.m4, po.m4, quotearg.m4,
	stat-macros.m4, stdint.m4, strftime.m4, timespec.m4,
	unlocked-io.m4, xalloc.m4, yesno.m4: Update from GNULIB.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* save-cwd.m4: Update from GNULIB.

2005-03-07  Mark D. Baushke  <mdb@cvshome.org>

	* mmap-anon.m4: Update from GNULIB.

2005-03-03  Derek Price  <derek@ximbiot.com>

	* mmap-anon.m4, pagealign_alloc.m4: New files from GNULIB.
